--- a/index.Rmd
+++ b/index.Rmd
@@ -15,5 +15,8 @@ output:
 
 - [Topic 4: Linear Relationship](Topic-4-Linear-Relationship.html)
 
-- [Topic 5: Two-way Tables](Topic-5-Two-Way-Tables.html)
+<!-- - [Topic 5: Two-way Tables](Topic-5-Two-Way-Tables.html) -->
+
+- [Topic 5: Introduction to Probability](Topic-5-Probability.html)
+
 
