--- a/Topic-7-Discrete-Random-Variables.Rmd
+++ b/Topic-7-Discrete-Random-Variables.Rmd
@@ -45,13 +45,11 @@ library(ggExtra)
   **Example:**
 
   - Rolling a fair dice, the number of dots on the top faces is a discrete random variable takes on the possible values: 1, 2, 3, 4, 5, 6.
-  <!-- - Flipping a fair coin 10 times, the number of heads is a discrete random variable takes on the possible values: 1, 2, 3, ..., 10. -->
 
 - A **continuous random variable** takes on values which form an interval of numbers.
 
   **Example:**
 
-  <!-- - The height of a randomly select 10-year-old boy in US is normally between 129 cm and 157 cm. So the height is a continuous random variable. -->
   - The measure the voltage at a randomly electrical outlet normally is between 118 and 122. SO the measure of voltage is a continuous random variable.
 
 ---
@@ -110,7 +108,7 @@ Let $X$ be the number of heads that are observed when tossing two fair coins.
 | $x$   | 0   | 1   | 2   |
 |-----|-----|-----|-----|
 | $P(X=x)$ |0.25 | 0.5 | 0.25|
-]
+:::
 
 From the table, we may find the following cumulative distributions:
 $$P(X\leq 1)=P(X=0)+P(X=1)=0.25+0.5=0.75.$$
@@ -144,8 +142,6 @@ theme(panel.grid=element_blank())
 ```
 :::
 
---
-
 **Solution:** Let $X$ be the number of heads. From the probability histogram, we know that $P(X=0)=`r prob[1]`$, and $P(X=1)=`r prob[2]`$.
 
 Then the probability of getting at most 1 head is
@@ -166,7 +162,9 @@ A pair of fair 6-sided dice were rolled. Let $X$ denote the sum of the number of
 
 ## Practice: Probability Distribution of Bus Waiting Time
 
+::: {.iframecontainer}
 `r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=916595&seed=2020&showansafter", height="560px")`
+:::
 
 ---
 
@@ -180,21 +178,21 @@ Let $X$ be a discrete random variable and $p_X(x)=P(X=x)$ the probability mass f
 
 - The **standard deviation** $\sigma$ of a discrete random variable $X$ is the square root of its variance: $$\sigma=\sqrt{\sum (x-E(X))^2p_X(x)}.$$
 
-<!-- --- -->
+---
 
-<!-- ## Some Properties of Expected Value (Optional) -->
+## Some Properties of Expected Value (Optional)
 
-<!-- - The expected value of a linear combination two random variables $X$ and $Y$ is the linear combination of their expected values, that is $$E(aX+bY)=aE(X)+bE(Y).$$ -->
+- The expected value of a linear combination two random variables $X$ and $Y$ is the linear combination of their expected values, that is $$E(aX+bY)=aE(X)+bE(Y).$$
 
-<!-- - The expected value in general is not multiplicative, that is $E(XY)\ne E(X)E(Y)$. -->
+- The expected value in general is not multiplicative, that is $E(XY)\ne E(X)E(Y)$.
 
-<!-- - If the two random variable $X$ and $Y$ are independent, then $$E(XY)=E(X)E(Y).$$ -->
+- If the two random variable $X$ and $Y$ are independent, then $$E(XY)=E(X)E(Y).$$
 
-<!-- - The variance can be computed using expected values: -->
-<!--   $$\mathrm{Var}(X)=E(X^{2})-(E[X])^{2}.$$ -->
+- The variance can be computed using expected values:
+  $$\mathrm{Var}(X)=E(X^{2})-(E[X])^{2}.$$
 
-<!-- - Let $X$ and $Y$ be two *independent* variables. Then the variance of a linear combination $aX+bY$ equals -->
-<!-- $$\mathrm{Var}(aX+bY)=a^2\mathrm{Var}(X)+b^2\mathrm{Var}(Y)$$ -->
+- Let $X$ and $Y$ be two *independent* variables. Then the variance of a linear combination $aX+bY$ equals
+$$\mathrm{Var}(aX+bY)=a^2\mathrm{Var}(X)+b^2\mathrm{Var}(Y)$$
 
 ---
 
@@ -202,12 +200,13 @@ Let $X$ be a discrete random variable and $p_X(x)=P(X=x)$ the probability mass f
 
 One thousand raffle tickets are sold for $2 each. Each has an equal chance of winning. First prize is $500, second prize is $300, and third prize is $100. Find the expected value of gain, and interpret its meaning.
 
-**Solution:** Let $X$ denote the net gain from purchasing one ticket. The probability distribution for $X$ is  
+**Solution:** Let $X$ denote the net gain from purchasing one ticket. The probability distribution for $X$ is
+
 ::: {.center}
 | $x$    | 498    | 298    | 98     | -2       |
 |------|--------|--------|--------|----------|
 | $P(X=x)$ | $\frac{1}{1000}$ | $\frac{1}{1000}$ | $\frac{1}{1000}$ | $\frac{997}{1000}$ |
-]
+:::
 
 The expected gain is $$E(X)= 498\cdot \frac{1}{1000}+ 298\cdot\frac{1}{1000}+98\cdot \frac{1}{1000}+(-2)\cdot \frac{997}{1000}=-1.1,$$ which means that when buying one ticket, the buyer may expect a loss of $1.1.  
 
@@ -216,11 +215,12 @@ The expected gain is $$E(X)= 498\cdot \frac{1}{1000}+ 298\cdot\frac{1}{1000}+98\
 ## Example: Waiting Time
 
 The wait times (rounded to multiples of 5) in the cafeteria at a Community College has the following probability distribution. Find the expected waiting time and the standard deviation.
+
 ::: {.center}
 | $x$ (minutes) | 5        | 10       | 15      | 20       | 25       |
 | -------------------- | -------- | -------- | -------- | -------- | -------- |
 | $P(X=x)$             | 0.13 | 0.25 | 0.31 | 0.21 | 0.1 |
-]
+:::
 
 **Solution:** The expected waiting time is
 $$E(X)= 5\cdot 0.13 +10\cdot 0.25+15\cdot 0.31+20\cdot 0.21 + 25\cdot 0.1 = 14.5.$$
@@ -231,18 +231,18 @@ $$\scriptsize\begin{aligned}\sigma=&\sqrt{(5-14.5)^2\cdot 0.13 +(10-14.5)^2\cdot
 
 ---
 
-## Example: Unfair Die (1/2)
+## Example: Unfair Die (1 of 2)
 
 The probability distribution of an unfair die is given in the following table.
 
+::: {.center}
 | $x$ | 1| 2| 3| 4| 5| 6|
 |---|---|---|---|---|---|
 | $P(X=x)$ | 0.18| 0.12| $\,?\,$ |0.14|0.23|0.17|
+:::
 
 1. Find $P(X=3)$.
 2. Find the mean, variance and standard deviation of this probability distribution.
-
---
 
 **Solution:** Since the sum of probabilities must be 1, we know that
 $$
@@ -251,9 +251,9 @@ $$
 
 ---
 
-## Example: Unfair Die (2/2)
+## Example: Unfair Die (2 of 2)
 
-**Solution: (Continued)** The mean is the weighted sum
+The mean is the weighted sum
 $$
 % \scriptstyle
 \begin{aligned}
@@ -286,9 +286,9 @@ Seven thousand lottery tickets are sold for $5 each. One ticket will win $2,000,
 2. Compute the expected value $E(X)$ of $X$. Interpret its meaning.
 3. Compute the standard deviation $\sigma$ of $X$.
 
-.footmark[
+::: {.footmark}
 Source: [https://saylordotorg.github.io/text_introductory-statistics/s08-02-probability-distributions-for-.html](https://saylordotorg.github.io/text_introductory-statistics/s08-02-probability-distributions-for-.html)
-]
+:::
 
 ---
 
@@ -309,14 +309,12 @@ where $n!=n(n-1)\cdots 1$, read as $n$ factorial, for $n>0$ and $0!=1.$
 
 ---
 
-## Example: Probability from Drawing a Card Multiple Times (1/2)
+## Example: Probability from Drawing a Card Multiple Times (1 of 2)
 
 A card is randomly selected from a standard deck and replaced. This experiment is repeated a total of $5$ times.
 
 - Find the probability of getting exactly $3$ clubs.
 - Find the probability of getting at least $3$ clubs.
-
---
 
 **Solution:** This is a binomial experiment. The number to total trials is $n=5$. The number of successes is $3$. The chance of a success is $p=\frac{13}{52}=\frac14$. Apply the binomial probability formula, we have
 $$P(X=3)=\frac{5!}{3!2!} \left(\frac{1}{4}\right)^3\left(\frac34\right)^2=10\cdot\frac{9}{4^5}\approx 0.088.$$
@@ -327,13 +325,15 @@ $$P(X\geq 3) =1-P(X\leq 2)=1-(P(0)+P(1)+P(2))\approx 1-0.8965=0.1035.$$
 
 ---
 
-## Example: Probability from Drawing a Card Multiple Times (2/2)
-  
-**Solution:(continued)**
+## Example: Probability from Drawing a Card Multiple Times (2 of 2)
+
 To calculate $P(X\leq 2)$, we may also use the binomial distribution table or the Excel function `BINOM.DIST()`.
 
 **Method 1:** As $n=5$ and $p=0.25$, we use the following portion of the cumulative binomial distribution table.
-::: {.center}Binomial Probability Table *n=5*
+
+::: {.center}
+
+Binomial Probability Table *n=5*
 
 | n    | x    | 0.1    | 0.15   | 0.2    | 0.25   | 0.3    | 0.35   | 0.4    |
 | ---- | ---- | ------ | ------ | ------ | ------ | ------ | ------ | ------ |
@@ -341,14 +341,11 @@ To calculate $P(X\leq 2)$, we may also use the binomial distribution table or th
 | 5    | 1    | 0.3281 | 0.3915 | 0.4096 | .red[0.3955] | 0.3602 | 0.3124 | 0.2592 |
 | 5    | 2    | 0.0729 | 0.1382 | 0.2048 | .red[0.2637] | 0.3087 | 0.3364 | 0.3456 |
 | 5    | 3    | 0.0081 | 0.0244 | 0.0512 | 0.0879 | 0.1323 | 0.1811 | 0.2304 |
-]
+:::
 
 $P(X\le 2) \approx 0.2373+0.3955+0.2637= 0.8965.$
 
 **Method 2:** In Excel, $P(X\le 2)$ `=BINOM.DIST(2,5,0.25,TRUE)` $\approx 0.8965$.
-
-???
-In a calculator, use `binompdf(n, p, x)` for $P(X=x)$ and `binomcdf(n, p, x)` for $P(X\leq x)$.
 
 ---
 
@@ -364,7 +361,9 @@ Let $X$ be a binomial random variable with parameters $n = 5$, $p=0.2$. Find the
 
 ## Practice: Machine Defect Rate
 
+::: {.iframecontainer}
 `r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=7211&seed=2020&showansafter", height="560px")`
+:::
 
 ---
 
@@ -388,8 +387,6 @@ The probability that an egg in a retail package is cracked or broken is 0.02.
 2. Find the standard deviation.
 3. Is getting at least two broken eggs unusual?
 
---
-
 **Solution:** Since there are 12 eggs and the chance of getting a cracked egg is 0.02, the average number of cracked is
 $$\mu =np=12\cdot 0.02=0.24.$$
 
@@ -412,77 +409,64 @@ Adverse growing conditions have caused 5% of grapefruit grown in a certain regio
 
 ## Practice: Mean and SD of a Binomial Distribution
 
+::: {.iframecontainer}
 `r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=916606&seed=2020&showansafter", height="560px")`
-
-<!-- --- -->
-
-<!-- # Extra Practice Problems -->
-
-<!-- --- -->
-
-<!-- ## Practice: Find the mean of a discrete probability distribution -->
-
-<!-- `r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=7197&seed=2020&showansafter", height="560px")` -->
-
-<!-- --- -->
-
-<!-- ## Practice: Find the standard deviation of a discrete probability distribution -->
-
-<!-- `r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=7198&seed=2020&showansafter", height="560px")` -->
-
-<!-- --- -->
-
-<!-- ## Practice: The number of sales of new employees -->
-
-<!-- .pull-left[ -->
-<!-- A company tracks the number of sales new employees make each day during a 100-day probationary period. The results for one new employee are shown at the right. -->
-
-<!--   1. Find the probability of each outcome. -->
-<!--   2. Construct a probability distribution table. -->
-<!--   3. Find the mean of the probability distribution. -->
-<!--   4. Find the variance and standard deviation. -->
-<!-- ]<br> -->
-<!-- .pull-right[ -->
-
-<!-- | Sales per day $x$ | Number of days $f$ | -->
-<!-- |-------------------|--------------------| -->
-<!-- | 0                 | 16                 | -->
-<!-- | 1                 | 19                 | -->
-<!-- | 2                 | 15                 | -->
-<!-- | 3                 | 21                 | -->
-<!-- | 4                 | 9                  | -->
-<!-- | 5                 | 10                 | -->
-<!-- | 6                 | 8                  | -->
-<!-- | 7                 | 2                  | -->
-<!-- ] -->
-
-<!-- --- -->
-
-<!-- ## Practice: Probability within one SD of a discrete probability distribution -->
-
-<!-- `r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=14762&seed=2020&showansafter", height="560px")` -->
-
-
-<!-- --- -->
-
-<!-- ## Practice: Probability from a poll -->
-
-<!-- `r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=7210&seed=2020&showansafter", height="560px")` -->
-
-
-<!-- --- -->
-
-<!-- ## Practice: Chance of continuous successes of a type of surgery -->
-
-<!-- A type of surgery has a 90% chance of success. The surgery is performed on three patients. Find the probability of the surgery being successful on exactly two patients. -->
+:::
 
 ---
-class: center middle
 
-# Lab Instructions in Excel
+<!-- # class = "center middle" -->
+
+::: {.part}
+Extra Practice
+:::
+
+---
+
+## Practice: Find the mean of a discrete probability distribution
+
+::: {.iframecontainer}
+`r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=7197&seed=2020&showansafter", height="560px")`
+:::
+
+---
+
+## Practice: Find the standard deviation of a discrete probability distribution
+
+::: {.iframecontainer}
+`r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=7198&seed=2020&showansafter", height="560px")`
+:::
+
+---
+
+## Practice: Probability within one SD of a discrete probability distribution
+
+::: {.iframecontainer}
+`r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=14762&seed=2020&showansafter", height="560px")`
+:::
+
+---
+
+## Practice: Probability from a poll
+
+::: {.iframecontainer}
+`r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=7210&seed=2020&showansafter", height="560px")`
+:::
+
+---
+
+<!--# class = "center middle" -->
+
+::: {.part}
+Lab Instructions in Excel
+:::
 
 ---
 
 ## Excel Functions for Binomial
 
-Let $X$ be a binomial random variable with parameters $n$ and $p$, that is $X\sim B(n, p)$. In Excel, $P(X=x)$ is given by `BINORM.DIST(x, n, p, FALSE)` and $P(X\le x)$ is given by `BINORM.DIST(x, n, p, TRUE)`. You may click input function $f_x$ and then search `binorm` to find the function.
+Let $X$ be a binomial random variable with parameters $n$ and $p$, that is $X\sim B(n, p)$. In Excel, $P(X=x)$ is given by `BINOM.DIST(x, n, p, FALSE)` and $P(X\le x)$ is given by `BINOM.DIST(x, n, p, TRUE)`. You may click input function $f_x$ and then search `binom` to find the function.
+
+## Practice: Binominal Distribution Table
+
+Create a binomial distribution table for $p=0.5$ and $n=10$.
